--- a/MistralEvaluationSABA.ipynb
+++ b/MistralEvaluationSABA.ipynb
@@ -14,11 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = \"iRe8jXi71gLpIdVQijjG7XguKSr1Skbp\"\n",
+    "api_key = \"\"\n",
     "client = Mistral(api_key=api_key)\n",
     "model_name = \"mistral-saba-latest\""
    ]
